<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Instant Backup</string>
    <string name="service_label">File Monitor &amp; Backup</string>
    <string name="service_description">Monitor files and directories, and backup it.</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_instant_backup">Instant Backup</string>
    <string name="file_monitor_started">File Monitor Started</string>
    <string name="file_monitor_stopped">File Monitor Stopped</string>
    <string name="add_file_or_dir">Add</string>
    <string name="restart_service">Restart Service</string>
    <string name="quit">Quit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add_file">Add Directoy to Scan</string>
    <string-array name="spinner_actions">
        <item >Copy</item>
        <item >Move</item>
        <item >Delete</item>
        <item >Add to Multimedia Library</item>
    </string-array>
    <string name="label_file">Source directory</string>
    <string name="label_events">Events</string>
    <string name="label_actions">Actions</string>
    <string name="label_dst">Destination Directory</string>
    <string name="check_new_file">New File</string>
    <string name="check_modified">Modified File</string>
    <string name="check_delete">Deleted</string>
    <string name="button_select">Select</string>
    <string name="add_entry">Add entry</string>
    <string name="dialog_src_title">Select a directory to scan</string>
    <string name="dialog_dst_title">Select a directory to destination</string>
    <string name="dialog_button">Use this</string>
    <string name="options">Options</string>
    <string name="error_pick">Error in pick directory</string>

</resources>